--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,11 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      - name: Install golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.8
       - name: Install prek
         run: curl -sSfL https://github.com/j178/prek/releases/latest/download/prek-installer.sh | sh
       - run: prek run --all-files
+        env:
+          SKIP: golangci-lint
 
   build:
     name: Build
